--- a/JS_prac/testFiles/test1/index.html
+++ b/JS_prac/testFiles/test1/index.html
@@ -20,14 +20,17 @@
     <div id="border4"></div>
 
     <button id="btn-1" autofocus="true"> click </button>
-    <div class="top">
-        <h1 id="h2-top"> 0 </h1>
-    </div>
-    <div class="top">
-        <h1 id="h3-top"> 0 </h1>
-    </div>
+    <div> <h1 id="h2-top"> 0 </h1></div>
+    <div> <h1 id="h3-top"> 0 </h1></div>
 
     <button id="keyboard"> 🔳 </button>
+    <br><br>
+
+    <div> 이 사이트에서는 복사하지 마시오 </div>
+    <div id="clipboard-print">  </div>
+
+    <div id="dragCheck"> 여기를 드래그 해보세요~ </div>
+    <div id="dragPrint">  </div>
 
     <script src="app.js"></script>
 </body>
