--- a/JS_prac/testFiles/test1/index.html
+++ b/JS_prac/testFiles/test1/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <div class="top">
-        <h1 id="h1-top"> 🔴.......................🏎️. </h1>
+    <div class="car-race">
+        <h1 id="car-race-id"> 🔴.......................🏎️. </h1>
     </div>
     
     <div id="border1"></div>
