this 용법 쳐보기

--- a/node-package-ex/index.html
+++ b/node-package-ex/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="color-container"> dd </div>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>ㅂ
     <script src="randomColor.js"></script>
 </body>
 </html>
